--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -139,6 +139,10 @@
     }
   }
 
+  #weapon-attacks {
+    grid-template-columns: 28px 1fr 1fr 28px 28px 28px;
+  }
+
   /* Sheet Tabs */
   .tabs {
     flex: 0 0 40px;
