--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -1,5 +1,5 @@
 <form class="flexcol {{cssClass}}" autocomplete="off">
-
+    {{log this}}
     {{!-- Sheet Header --}}
     <header class="sheet-header">
         <img class="profile-img" src="{{data.img}}" data-edit="img" title="{{data.name}}" height="100" width="100" />
@@ -34,19 +34,25 @@
         <div class="tab play" data-group="primary" data-tab="play">
             <div id="play-grid">
                 <div class="flex-container">
+
+                    {{!-- Traits --}}
                     <div id="traits" class="pen-container container-grid">
                         {{#each data.system.traits}}
                         {{#each this}}
                         {{#if @first}}
                         <input type="checkbox" name="system.traits.{{@../index}}.{{@key}}.isChecked" {{#if this.isChecked}}checked{{/if}}/>
-                        <label class="trait rollable left" data-label="{{localize this.label}}" data-value="{{this.value}}">{{localize this.label}}</label>
+                        <label class="trait rollable left" data-label="{{localize this.label}}" data-value="{{this.value}}">
+                            {{localize (concat "PENDRAGON." (capital @key))}}
+                        </label>
                         <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" id="trait-input-{{@key}}" disabled/>
                         <button class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}">+</button>
                         {{/if}}
                         {{#if @last}}
                         <button class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}">+</button>
                         <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" id="trait-input-{{@key}}" disabled/>
-                        <label class="trait rollable right" data-label="{{localize this.label}}" data-value="{{this.value}}">{{localize this.label}}</label>                            
+                        <label class="trait rollable right" data-label="{{localize this.label}}" data-value="{{this.value}}">
+                            {{localize (concat "PENDRAGON." (capital @key))}}
+                        </label>                            
                         <input type="checkbox" name="system.traits.{{@../index}}.{{@key}}.isChecked" {{#if this.isChecked}}checked{{/if}}/>
                         {{/if}}
                         {{/each}}
