--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -1,5 +1,4 @@
 <form class="flexcol {{cssClass}}" autocomplete="off">
-    {{log this}}
     {{!-- Sheet Header --}}
     <header class="sheet-header">
         <img class="profile-img" src="{{data.img}}" data-edit="img" title="{{data.name}}" height="100" width="100" />
@@ -58,6 +57,8 @@
                         {{/each}}
                         {{/each}}
                     </div>
+
+                    {{!-- Passions --}}
                     <div id="passions" class="pen-container container-grid">
                         {{#each inventory.passion}}
                             <input class="item-checkbox" type="checkbox" data-item-id="{{this._id}}" {{#if this.system.isChecked}}checked{{/if}}/>
@@ -116,8 +117,12 @@
                     {{#each inventory.weapon}}
                     <img src="{{this.img}}" title="{{this.name}}"/>
                     <label>{{this.name}}</label>
-                    <label>{{this.system.skill.value}}</label>
-                    <label>{{this.system.formula.value}}</label>
+                    <label>
+                        {{#with (lookup ../data.system.skills.combat system.skill)}}
+                        {{value}}
+                        {{/with}}
+                    </label>
+                    <label>{{this.system.formula}}</label>
                     <button class="item-edit" data-item-id="{{this._id}}">=</button>
                     <button class="item-delete" data-item-id="{{this._id}}">-</button>
                     {{/each}}
