--- a/styles/pendragon.css
+++ b/styles/pendragon.css
@@ -125,7 +125,7 @@
   grid-column: 1 / span 4;
 }
 .pendragon #weapon-attacks {
-  grid-template-columns: 28px 1fr 1fr 28px 28px 28px;
+  grid-template-columns: 28px 1fr 28px 1fr 28px 28px;
 }
 .pendragon .tabs {
   flex: 0 0 40px;
