--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -140,7 +140,7 @@
   }
 
   #weapon-attacks {
-    grid-template-columns: 28px 1fr 1fr 28px 28px 28px;
+    grid-template-columns: 28px 1fr 28px 1fr 28px 28px;
   }
 
   /* Sheet Tabs */
