--- a/templates/items/passion-sheet.html
+++ b/templates/items/passion-sheet.html
@@ -12,7 +12,7 @@
             <div>
                 <div class="flexrow">
                     <label>{{localize "PENDRAGON.Experience"}}</label>
-                    <input type="checkbox" name="system.isChecked" {{#if data.system.isChecked}}checked{{/if}}/>
+                    <input type="checkbox" name="system.isChecked" {{checked data.system.isChecked}}/>
                 </div>
                 <div class="flexrow">
                     <label>{{localize "PENDRAGON.Value"}}</label>
